refactor and resize list api